syntax = "proto3";

option csharp_namespace = "Persistify.Protos";

import "Protos/shared.proto";

// Create
message CreateTypeRequestProto {
  TypeDefinitionProto TypeDefinition = 1;
}

message CreateTypeResponseProto {
}

// List
message ListTypesRequestProto {
  PaginationRequestProto PaginationRequest = 1;
}

message ListTypesResponseProto {
  repeated TypeDefinitionProto TypeDefinitions = 1;
  PaginationResponseProto PaginationResponse = 2;
}

// Delete